2008-08-29  Michael Calmer  <mc@suse.de>
	* release version 0.59

	* src/mod_pam_unix2.c: skip password change for uid > 999
	in case of krb5 is used.
	* src/mod_pam_unix.c: Likewise.

	* src/mod_pam_succeed_if.c: dummy used for feature above.

	* src/supported-modules.h: add mod_pam_succeed_if
	* src/Makefile.am: Likewise.

	* tests/single.out/test-krb5.out: Adapt testcase
	* tests/single.out/test-krb5-ldap.out: Likewise
	* tests/single.out/test-ldap-account_only.out: Likewise.

	* tests/support/header.sh: set LANG=C when running checks

	* po/: Update translations.
	
2008-08-22  Michael Calmer  <mc@suse.de>
	* release version 0.58

	* src/pam-config.c: query options in ldap-account_only
	not in case of ldap is complete enabled
	* src/mod_pam_ldap.c: query options in ldap only if
	not only ldap-account_only is enabled
	* tests/testcases/test-ldap-account_only.single: test
	query options
	* tests/single.out/test-ldap-account_only.out: Adapted to
	reflect changed testcase

2008-07-28  Sven Schober    <sschober@suse.de>

	* release version 0.57

	* src/mod_pam_mount: Use "optional" instead of "required" in
	session stack [bnc#409541].
	* tests/single.out/test-cryptpass_w_mount.out: Adapted to
	reflect changed behaviour.
	* tests/single.out/test-mount.out: Likewise.

2008-07-14  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.56

	* src/mod_pam_csync.c: Add is_enabled as bool option.

2008-07-10  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.55

	* src/mod_pam_csync.c: New file (FATE#303805).
	* src/supported-modules.h: Add mod_pam_csync.
	* src/Makefile.am: Add mod_pam_csync.c.
	* src/pam-config.8.xml: Add --csync.

2008-06-20  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.54

	* src/supported-modules.h: Add pam_ssh.
	* src/Makefile.am: Likewise.
	* src/mod_pam_ssh.c: New.
	Based on patch from Marius Tomaschewski <mat@mt-home.net>.

2008-05-23  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.53

	* po/*.po: Update translations.
