@@ -30,7 +30,7 @@ static int
 write_config_krb5 (pam_module_t *this, enum write_type op, FILE *fp)
 {
   option_set_t *opt_set = this->get_opt_set (this, op);
-  int with_ldap, with_nam, with_winbind, with_ccreds;
+  int with_ldap, with_nam, with_winbind, with_ccreds, with_group, with_ssh;
 
   if (debug)
     debug_write_call (this, op);
@@ -46,6 +46,11 @@ write_config_krb5 (pam_module_t *this, enum write_type op, FILE *fp)
 				    "pam_winbind.so", op);
   with_ccreds = is_module_enabled (common_module_list,
 				   "pam_ccreds.so", op);
+  
+  with_group = is_module_enabled (common_module_list,
+				   "pam_group.so", op);
+  with_ssh = is_module_enabled (common_module_list,
+				   "pam_ssh.so", op);
 
   switch (op)
     {
@@ -68,10 +73,7 @@ write_config_krb5 (pam_module_t *this, enum write_type op, FILE *fp)
        * use_authtok would result in an error if this is not the case and we cannot
        * be sure that an other module has asked for the new password before we call
        * pam_krb5. */
-      if (with_ldap || with_nam)
         fprintf (fp, "password\tsufficient\tpam_krb5.so ");
-      else
-        fprintf (fp, "password\trequired\tpam_krb5.so ");
       break;
     case SESSION:
       fprintf (fp, "session\toptional\tpam_krb5.so\t");
@@ -93,8 +95,13 @@ write_config_krb5 (pam_module_t *this, enum write_type op, FILE *fp)
       fprintf (fp, "auth\t[default=bad]\tpam_ccreds.so\taction=update\n");
     }
 
-  if (op == AUTH && !(with_ldap || with_nam || with_winbind))
+  if (op == AUTH && !(with_ldap || with_nam || with_winbind || with_group || with_ssh))
 	  fprintf (fp, "auth\trequired\tpam_deny.so\n");
+
+  /* ldap and nam are behind this module. We write a deny
+	 only if we are the last module. */
+  if (op == PASSWORD && !(with_ldap || with_nam ))
+	  fprintf (fp, "password\trequired\tpam_deny.so\n");
 
   return 0;
 }
