@@ -47,7 +47,8 @@ account	required	pam_ldap.so	use_first_pass
 password	requisite	pam_pwcheck.so	debug nullok cracklib 
 password	[default=ignore success=1]	pam_succeed_if.so	uid > 999 debug 
 password	sufficient	pam_unix2.so	use_authtok nullok debug 
-password	required	pam_krb5.so 
+password	sufficient	pam_krb5.so 
+password	required	pam_deny.so
 #%PAM-1.0
 #
 # This file is autogenerated by pam-config. All changes
@@ -198,7 +199,8 @@ account	required	pam_krb5.so	use_first_pass
 password	requisite	pam_pwcheck.so	debug nullok cracklib 
 password	[default=ignore success=1]	pam_succeed_if.so	uid > 999 debug 
 password	sufficient	pam_unix2.so	use_authtok nullok debug 
-password	required	pam_krb5.so 
+password	sufficient	pam_krb5.so 
+password	required	pam_deny.so
 #%PAM-1.0
 #
 # This file is autogenerated by pam-config. All changes
@@ -350,7 +352,8 @@ account	required	pam_ldap.so	use_first_pass
 password	requisite	pam_pwcheck.so	debug nullok cracklib 
 password	[default=ignore success=1]	pam_succeed_if.so	uid > 999 debug 
 password	sufficient	pam_unix2.so	use_authtok nullok debug 
-password	required	pam_krb5.so 
+password	sufficient	pam_krb5.so 
+password	required	pam_deny.so
 #%PAM-1.0
 #
 # This file is autogenerated by pam-config. All changes
@@ -424,7 +427,8 @@ account	required	pam_ldap.so	use_first_pass
 password	requisite	pam_pwcheck.so	debug nullok cracklib 
 password	[default=ignore success=1]	pam_succeed_if.so	uid > 999 debug 
 password	sufficient	pam_unix2.so	use_authtok nullok debug 
-password	required	pam_krb5.so 
+password	sufficient	pam_krb5.so 
+password	required	pam_deny.so
 #%PAM-1.0
 #
 # This file is autogenerated by pam-config. All changes
